fix broken links and sizing on smaller phones

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -196,12 +196,39 @@ footer {
 
 
 // smart phones
+@media (max-width: 430px) {
+  .container {
+    width: 100%;
+  }
+  #home-splash{
+    height: 1050px;
+    background-attachment: scroll;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: -240px;
+
+  }
+
+  #plans-head {
+    height: 250px;
+
+    .animated-words span {
+      padding-left: 20px;
+    }
+  }
+
+
+    #hosting-head {
+      height: 300px;
+    }
+}
+
 @media (max-width: 575px) {
   .container {
     width: 100%;
   }
   #home-splash{
-    height: 900px;
+    height: 1050px;
     background-attachment: scroll;
     background-size: cover;
     background-repeat: no-repeat;
